add mongo support and import data

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,6 +31,8 @@ services:
     image: mongo:4.4
     ports:
       - "27017:27017"  # MongoDB bo dosegljiv na portu 27017
+    networks:
+      - app-network
     volumes:
       - mongo-data:/data/db
 
