Add AHP calcualtion

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -13,9 +13,11 @@ RUN pip install --no-cache-dir -r requirements.txt
 # Dovolimo Flasku, da deluje znotraj Dockerja
 ENV FLASK_APP=app.py
 ENV FLASK_RUN_HOST=0.0.0.0
+# Omogoči način za razvijalce (vklopi debug)
+ENV FLASK_ENV=development  
 
 # Odprimo port 5000 za Flask aplikacijo
 EXPOSE 5000
 
 # Zagon Flask aplikacije
-CMD ["flask", "run"]
+CMD ["flask", "run", "--debug"]
