add promethee and debug

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -4,3 +4,11 @@ flask-cors
 requests
 beautifulsoup4
 numpy
+debugpy
+werkzeug
+markupsafe
+click
+blinker
+jinja2
+itsdangerous
+importlib_metadata
