--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 /node_modules
-
+/node_modules/*
+frontend/node_modules/
 /frontend/dist/
 /dist
 
@@ -8,3 +9,4 @@
 /backend/__pycache__/*
 __pycache__/
 
+.vscode/
